# OnWriting

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  CLAUDE.md  LICENSE  Lang-Agent-Framework-Roughidea-.md  README.md  lang-agent-framework-map.json  pyproject.toml
backend/docs/: configuration-reference.md
backend/notebooks/: 00_prototype_demo.ipynb
backend/scripts/: ft_check_status.py  ft_compile_data.py  ft_convert_outputs.py  ft_launch_job.py  ft_list_models.py  ft_run_comparison.py  ft_validate_data.py  hc_discover_books.py  run_prototype.py
backend/src/ai_writer/: __init__.py  config.py  logging_config.py
backend/src/ai_writer/agents/: base.py  beat_outliner.py  plot_architect.py  scene_writer.py  style_editor.py
backend/src/ai_writer/api/: __init__.py
backend/src/ai_writer/core/: __init__.py
backend/src/ai_writer/fine_tuning/: __init__.py  config.py  llm.py
backend/src/ai_writer/hardcover/: client.py  (+5 more)
backend/tests/: conftest.py
backend/tests/agents/: test_beat_outliner.py  test_plot_architect.py  test_scene_writer.py  test_style_editor.py
backend/tests/fine_tuning/: test_comparison_runner.py  test_converter.py  test_data_schemas.py  test_gcs.py  test_judge.py  test_launcher.py  test_llm.py  test_registry.py  test_report.py  test_validator.py
backend/tests/hardcover/: test_client.py  test_discovery.py  test_schemas.py  test_scoring.py
backend/tests/pipelines/: test_prototype.py
backend/tests/schemas/: test_characters.py  test_editing.py  test_pipeline.py  test_story.py  test_structure.py  test_world.py  test_writing.py
backend/tests/utils/: test_context.py  test_prose_structure.py  test_repetition.py  test_slop.py  test_text_analysis.py  test_vocabulary.py
(+66 files in other folders)
